--- a/css/styles.css
+++ b/css/styles.css
@@ -45,8 +45,8 @@
 }
 
 .main h1 {
-    font-size: 3.2rem;
-    font-weight: 600;
+    font-size: 2.8rem;
+    color: #0a2952;
     font-family: robot;
 }
 
